update ServiceLevelTests to handle new exitCode/stdout/stderr changes from bug 1119688